--- a/static/index.html
+++ b/static/index.html
@@ -49,6 +49,12 @@
         width: 100%;
         text-align: justify;
       }
+      tr:nth-child(odd) {
+        background-color: antiquewhite;
+      }
+      tr:hover {
+        background-color: azure;
+      }
       .root {
         max-width: 1500px;
         margin-left: 15%;
@@ -57,10 +63,6 @@
       .nav {
         margin-bottom: 2em;
       }
-      .job-list .item {
-        display: flex;
-        justify-content: space-between;
-      }
       .title {
         padding-top: 1em;
         padding-bottom: 1em;
@@ -68,6 +70,10 @@
         display: flex;
         justify-content: space-between;
         background-color: aliceblue;
+      }
+      .logs {
+        height: calc(100vh - 150px);
+        overflow: auto;
       }
     </style>
     <base href="/index.html" />
@@ -106,40 +112,58 @@
           super(props);
           this.setState({ jobs: [], loading: true });
         }
-
         componentDidMount() {
-          fetch("/jobs")
-            .then((res) => {
-              res.json().then((jobs) => {
-                this.setState({ jobs });
-              });
-            })
-            .finally(() => {
-              this.setState({ loading: false });
-            });
+          this.loadData();
         }
-
+        loadData = () => {
+          this.setState({ loading: true, jobs: [] }, () => {
+            fetch("/jobs")
+              .then((res) => {
+                res.json().then((jobs) => {
+                  this.setState({ jobs });
+                });
+              })
+              .finally(() => {
+                this.setState({ loading: false });
+              });
+          });
+        };
         poll = (id) => {
           fetch(`/jobs/${id}/poll`, { method: "POST" }).then((res) => {
             res.json().then((data) => console.log(data));
           });
         };
-
         render() {
           const { loading, jobs } = this.state;
           if (loading) return "Loading...";
           return html`
-            <div class="job-list">
-              ${jobs.map(
-                (job) => html`
-      <div class="item">
-        <div><${Link} href=${`/jobs/${job.name}`}>${job.name}</Link></div>
-        <div><a href="javascript:void(0);" onClick=${() =>
-          this.poll(job.name)}>Poll now</a></div>
-      </div>
-    `
-              )}
+            <div class="title">
+              <div><h4>Home</h4></div>
+              <div>
+                <a href="javascript:void(0);" onClick=${this.loadData}
+                  >Reload</a
+                >
+              </div>
             </div>
+            <table>
+              <thead>
+                <tr>
+                  <th>Job</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                ${jobs.map(
+                  (job) => html`
+                  <tr>
+                    <td><${Link} href=${`/jobs/${job.name}`}>${job.name}</Link></td>
+                    <t><a href="javascript:void(0);" onClick=${() =>
+                      this.poll(job.name)}>Poll now</a></td>
+                  </tr>
+                `
+                )}
+              </tbody>
+            </table>
           `;
         }
       }
@@ -189,16 +213,20 @@
                       >
                     </div>
                   </div>
-                  <div>Branches</div>
-                  <div class="branch-list">
-                    ${(job.branches || []).map(
+                  <table>
+                    <thead>
+                      <tr><th>Branch</th></tr>
+                    </thead>
+                    <tbody>
+                      ${(job.branches || []).map(
                       (b) => html`
-          <div class="item">
-            <div><${Link} href=${`/jobs/${job.name}/branches/${b}`}>${b}</${Link}></div>
-          </div>
-        `
+                      <tr class="item">
+                        <td><${Link} href=${`/jobs/${job.name}/branches/${b}`}>${b}</${Link}></td>
+                      </tr>
+                      `
                     )}
-                  </div>
+                    </tbody>
+                  </table>
                 `}
           </div>`;
         }
@@ -217,18 +245,44 @@
           this.setState({ loading: true }, () => {
             fetch(`/jobs/${job}/branches/${branch}`).then((res) => {
               res.json().then((branchDetails) => {
-                this.setState({ branchDetails, loading: false });
+                this.setState({ branchDetails, loading: false }, () => {
+                  // keep reloading if any build is running
+                  if (
+                    (branchDetails.builds || []).filter(
+                      (b) => b.status === "building"
+                    )?.length
+                  ) {
+                    setTimeout(this.loadData, 2000);
+                  }
+                });
               });
             });
           });
         };
+        buildNow = () => {
+          const { job, branch } = this.props;
+          fetch(`/jobs/${job}/branches/${branch}/builds`, {
+            method: "POST",
+          }).then((res) => {
+            this.loadData();
+          });
+        };
+        abort = (build_num) => {
+          const { job, branch } = this.props;
+          fetch(`/jobs/${job}/branches/${branch}/builds/${build_num}`, {
+            method: "DELETE",
+          }).then((res) => {
+            this.loadData();
+          });
+        };
         render({ job, branch }, { loading, branchDetails }) {
-          console.log(job, branch, loading, branchDetails);
           if (loading) return "Loading...";
           return html`<div class="branch">
       <div class="title">
         <div><h4><${Link} href=${`/`}>Home</${Link}></h4> / <${Link} href=${`/jobs/${job}`}><h4>${job}</h4></${Link}> / <h4>${branch}</h4></div>
-        <div><a href="javascript:void(0);">Build Now</a></div>
+        <div><a href="javascript:void(0);" onClick=${
+          this.buildNow
+        }>Build Now</a></div>
         <div><a href="javascript:void(0);" onClick=${
           this.loadData
         }>Reload</a></div>
@@ -236,17 +290,27 @@
       <div>
         <table>
           <thead>
-            <tr><th colspan="4">Builds</th></tr>
             <tr><th>Build #</th><th>Commit</th><th>Status</th><th></th></tr>
           </thead>  
           <tbody>
-            ${(branchDetails.builds || []).map(
+            ${(branchDetails.builds || []).reverse().map(
               (b) => html`
                 <tr>
                   <td>${b.build_num}</td>
                   <td>${b.commit_hash}</td>
                   <td>${b.status}</td>
-                  <td><${Link} href=${`/jobs/${job}/branches/${branch}/builds/${b.build_num}/log`}>View Logs</${Link}></td>
+                  <td>
+                    ${
+                      b.status === "building"
+                        ? html`<a
+                            href="javascript:void(0);"
+                            onClick=${() => this.abort(b.build_num)}
+                            >Abort</a
+                          >`
+                        : ""
+                    }
+                    <${Link} href=${`/jobs/${job}/branches/${branch}/builds/${b.build_num}/log`}>Logs</${Link}>
+                  </td>
                 </tr>
               `
             )}
@@ -265,11 +329,20 @@
             page_size: 10,
             loading: false,
             lines: [],
+            status: undefined,
           };
         }
         componentDidMount() {
           this.loadData();
         }
+        reload = () => {
+          this.setState(
+            { line_idx: 0, page_size: 10, loading: false, lines: [] },
+            () => {
+              this.loadData();
+            }
+          );
+        };
         loadData = () => {
           const { job, branch, build_num } = this.props;
           const { line_idx, page_size, lines: existingLines } = this.state;
@@ -277,31 +350,55 @@
             fetch(
               `/jobs/${job}/branches/${branch}/builds/${build_num}/log?start=${line_idx}&num_lines=${page_size}`
             ).then((res) => {
-              res.json().then(({ has_more, lines }) => {
+              res.json().then(({ has_more, lines, status }) => {
                 existingLines.push(...lines);
-                this.setState({ lines: [...existingLines] });
-                if (has_more) {
+                this.setState({
+                  line_idx: existingLines.length,
+                  lines: [...existingLines],
+                  status,
+                });
+                if (has_more || status == "building") {
                   setTimeout(() => {
-                    this.setState({ line_idx: line_idx + page_size }, () =>
-                      this.loadData()
-                    );
-                  }, 100);
+                    this.loadData();
+                  }, 500);
                 }
               });
             });
           });
         };
-        render({ job, branch, build_num }, { lines }) {
+        abort = () => {
+          const { job, branch, build_num } = this.props;
+          fetch(`/jobs/${job}/branches/${branch}/builds/${build_num}`, {
+            method: "DELETE",
+          }).then((res) => {
+            this.loadData();
+          });
+        };
+        render({ job, branch, build_num }, { lines, status }) {
           return html`<div class="title">
           <div>
-            <h4><${Link} href=${`/`}>Home</${Link}></h4> / 
-            <h4><${Link} href=${`/jobs/${job}`}><h4>${job}</h4></${Link}></h4> / 
-            <h4><${Link} href=${`/jobs/${job}/branches/${branch}`}><h4>${branch}</h4></${Link}></h4> /
-            <h4>${build_num}</h4> / logs
+            <h4><${Link} href=${`/`}>Home</${Link}></h4> / <h4><${Link} href=${`/jobs/${job}`}><h4>${job}</h4></${Link}></h4> / <h4><${Link} href=${`/jobs/${job}/branches/${branch}`}><h4>${branch}</h4></${Link}></h4> / <h4>${build_num}</h4> / logs
           </div>
-          <div><a href="javascript:void(0);" onClick=${this.loadData}>Reload</a></div>
+          ${
+            status === "building"
+              ? html`<div>
+                  <a href="javascript:void(0);" onClick=${this.abort}
+                    >Abort Build</a
+                  >
+                </div>`
+              : ""
+          }
+          <div><a href="javascript:void(0);" onClick=${
+            this.loadData
+          }>Reload</a></div>
         </div>
-        <div>${lines.map((l) => html`<pre>${l}</pre>`)}</div>`;
+        <div class="logs">${lines.map((l) => html`<pre>${l}</pre>`)}</div>`;
+        }
+        componentDidUpdate() {
+          try {
+            const div = document.querySelector(".logs");
+            div.scrollTop = div.scrollHeight - div.clientHeight;
+          } catch (e) {}
         }
       }
 
@@ -318,7 +415,7 @@
         }
       }
 
-      render(html`<${App} page="All" />`, document.body);
+      render(html`<${App} />`, document.body);
     </script>
   </body>
 </html>
