--- a/static/index.html
+++ b/static/index.html
@@ -58,6 +58,10 @@
       tr:hover {
         background-color: azure;
       }
+      table a {
+        margin-left: 0.5em;
+        margin-right: 0.5em;
+      }
       .root {
         max-width: 1500px;
         margin-left: 15%;
@@ -78,7 +82,10 @@
         height: calc(100vh - 150px);
         overflow: auto;
       }
-      .form div, .form input, .form textarea, .form select {
+      .form div,
+      .form input,
+      .form textarea,
+      .form select {
         width: 100%;
       }
     </style>
@@ -180,7 +187,8 @@
                           this.poll(job.name)}>Poll now</a>
                       </td>
                       <td>
-                        <a href="javascript:void(0);" onClick=${_ => this.deleteJob(job.name)}>Delete</a>
+                        <a href="javascript:void(0);" onClick=${(_) =>
+                          this.deleteJob(job.name)}>Delete</a>
                       </td>
                     </tr>
                   `
@@ -200,24 +208,85 @@
             build_script: "",
             enable_poll: false,
             poll_interval_seconds: 300,
-            auth_type: null, // can be null | 'ssh_key' || 'user_pass'
+            auth_type: null, // can be null | 'PrivateKey' || 'UserPass'
             auth: {},
           };
         }
         canSubmit = () => {
+          const {
+            name,
+            repo_url,
+            build_script,
+            enable_poll,
+            poll_interval_seconds,
+            auth_type,
+            auth,
+          } = this.state;
+          if (!name) return false;
+          if (!repo_url) return false;
+          if (!build_script) return false;
+          if (enable_poll) {
+            if (!(poll_interval_seconds > 0)) {
+              return false;
+            }
+          }
+          switch (auth_type) {
+            case "PrivateKey":
+              if (!auth.private_key) return false;
+              break;
+            case "UserPass":
+              if (!auth.username) return false;
+              if (!auth.password) return false;
+              break;
+            default:
+              break;
+          }
           return true;
         };
-        create = () => {};
+        create = () => {
+          const {
+            name,
+            repo_url,
+            build_script,
+            enable_poll,
+            poll_interval_seconds,
+            auth_type,
+            auth,
+          } = this.state;
+          const req = {
+            name,
+            repo_url,
+            build_script,
+          };
+          if (enable_poll) {
+            req.poll_interval_seconds = poll_interval_seconds;
+          }
+          if (auth_type) {
+            const auth_req = {};
+            auth_req[auth_type] = auth;
+            req.auth = auth_req;
+          }
+          fetch("/jobs", {
+            headers: {
+              "Accept": "application/json",
+              "Content-Type": "application/json",
+            },
+            method: "POST",
+            body: JSON.stringify(req),
+          }).then((res) => {
+            route('/');
+          });z
+        };
         renderAuthForm = () => {
           const { auth_type, auth } = this.state;
           switch (auth_type) {
-            case "ssh_key":
+            case "PrivateKey":
               return html`
                 <div>SSH private key:</div>
                 <div>
                   <textarea
                     value=${auth.private_key}
-                    onChange=${(e) =>
+                    onInput=${(e) =>
                       this.setState({
                         auth: { ...auth, private_key: e.target.value },
                       })}
@@ -227,20 +296,20 @@
                 <div>
                   <input
                     value=${auth.passphrase}
-                    onChange=${(e) =>
+                    onInput=${(e) =>
                       this.setState({
                         auth: { ...auth, passphrase: e.target.value },
                       })}
                   />
                 </div>
               `;
-            case "user_pass":
+            case "UserPass":
               return html`
                 <div>User name:</div>
                 <div>
                   <input
                     value=${auth.username}
-                    onChange=${(e) =>
+                    onInput=${(e) =>
                       this.setState({
                         auth: { ...auth, username: e.target.value },
                       })}
@@ -251,7 +320,7 @@
                   <input
                     type="password"
                     value=${auth.password}
-                    onChange=${(e) =>
+                    onInput=${(e) =>
                       this.setState({
                         auth: { ...auth, password: e.target.value },
                       })}
@@ -280,24 +349,24 @@
               <tbody>
                 <tr>
                   <td>Name</td>
-                  <td><input value=${name} onChange=${(e) =>
-          this.setState({ name: e.target.value })} /></td>
+                  <td><input value=${name} onInput=${(e) =>
+            this.setState({ name: e.target.value })} /></td>
                 </tr>
                 <tr>
                   <td>Repo URL</td>
-                  <td><input value=${repo_url} onChange=${(e) =>
-          this.setState({ repo_url: e.target.value })} /></td>
+                  <td><input value=${repo_url} onInput=${(e) =>
+            this.setState({ repo_url: e.target.value })} /></td>
                 </tr>
                 <tr>
                   <td>Build Script</td>
-                  <td><input value=${build_script} onChange=${(e) =>
-          this.setState({ build_script: e.target.value })} /></td>
+                  <td><input value=${build_script} onInput=${(e) =>
+            this.setState({ build_script: e.target.value })} /></td>
                 </tr>
                 <tr>
                   <td>Poll repo periodically?</td>
-                  <td><input type="checkbox" checked=${enable_poll} onChange=${(
-          e
-        ) => this.setState({ enable_poll: e.target.checked })} /></td>
+                  <td><input type="checkbox" checked=${enable_poll} onInput=${(
+            e
+          ) => this.setState({ enable_poll: e.target.checked })} /></td>
                 </tr>
                 ${
                   enable_poll
@@ -309,7 +378,7 @@
                               type="number"
                               min="1"
                               value=${poll_interval_seconds}
-                              onChange=${(e) =>
+                              onInput=${(e) =>
                                 this.setState({
                                   poll_interval_seconds:
                                     parseInt(e.target.value) || 60,
@@ -326,8 +395,8 @@
                     <select onChange=${(e) =>
                       this.setState({ auth_type: e.target.value, auth: {} })}>
                       <option value="">None</option>
-                      <option value="ssh_key">SSH private key</option>
-                      <option value="user_pass">Username and password</option>
+                      <option value="PrivateKey">SSH private key</option>
+                      <option value="UserPass">Username and password</option>
                     </select>
                   </td>
                 </tr>
@@ -341,7 +410,9 @@
                 }
                 <tr>
                   <td colspan="2">
-                    <button disabled=${!this.canSubmit()}>Submit</button>
+                    <button disabled=${!this.canSubmit()} onClick=${
+            this.create
+          }>Submit</button>
                   </td>
                 </tr>
               </tbody>
